@@ -195,10 +195,10 @@ USECODE_INTRINSIC(select_from_menu2)
 
 USECODE_INTRINSIC(input_numeric_value)
 {
-	// Ask for # (min, max, step, default).
+	// Ask for # (min, max, step, default).  Be sure to show conversation.
 	Usecode_value ret(gumpman->prompt_for_number(
 		parms[0].get_int_value(), parms[1].get_int_value(),
-		parms[2].get_int_value(), parms[3].get_int_value()));
+		parms[2].get_int_value(), parms[3].get_int_value(), conv));
 	conv->clear_text_pending();	// Answered a question.
 	return(ret);
 }
