@@ -1,3 +1,9 @@
+2002-11-22  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* gamewin.cc (Game_window): Don't show new screen res. if in gump mode.
+	* gumps/Gump_manager.cc: Paint at start of do_modal_gump().  The
+	back-saving is no longer needed.
+
 2002-11-21  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* gumps/Spellbook_gump.cc (Spellbook_gump): Use correct font so
